--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,8 @@
     <title>MusicBookApp</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 
     {{content-for "head"}}
 
