--- a/tests/index.html
+++ b/tests/index.html
@@ -6,6 +6,10 @@
     <title>MusicBookApp Tests</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- <link href="../public/fontawesome.css" rel="stylesheet"> -->
+
 
     {{content-for "head"}}
     {{content-for "test-head"}}
